--- a/template/index.html
+++ b/template/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <div class="grid-container">
 <head>
+  <link rel="stylesheet" href="style.css">
   <title><GoodGlobe Store></title>
 </head>
 <body>
@@ -24,4 +26,5 @@
       §copy; 2024 GoodGlobe LLC </ footer›
       </div>
 </body>
+</div>
 </html>
