--- a/style.css
+++ b/style.css
@@ -7,3 +7,38 @@ body {
   height: 100vh;
   margin: 0;
 }
+.grid-container{
+  display: grid;
+  grid-template-areas;
+    "header"
+    "main"
+    "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows: 5rem 1fr 5rem;
+  height: 100%;
+}
+.header {
+  grid-area:headr;
+  background-color: #203040;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+}
+.brand a { 
+  color: #ffffff;
+  font-size: 3rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+.header-links a{ 
+  color: #ffffff;
+  text-decoration: none;
+  padding: 1rem;
+}
+.header-links a:hover{
+  color: #ff8000;
+}
+  
+  
