--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -129,3 +129,36 @@ a:hover{
 .product-rating{
   margin-bottom: 1rem;
 }
+.order-header { 
+  display: flex; 
+  justify-content: space-between; 
+  align-items: flex-start;
+}
+.content-margined { 
+  margin: 1rem;
+}
+.table{
+  width: 100%;    
+}
+th {
+  text-align: left;
+}
+tbody > tr:nth-child(odd) {
+background-color: #f0f0f0;
+}
+.checkout-steps { 
+  display: flex;
+  justify-content: space-between;
+  width: 40rem;
+  margin: 1rem auto;
+}
+.checkout-steps > div {
+  border-top: 0.3rem #c0c0c0 solid;
+  color: white;
+  flex: 1 1;
+  padding-top: 1rem;
+}
+.checkout-steps > div.active { 
+  border-top: 0.3rem #f08000 solid;
+  color: #f08000;
+}
